// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicProjectPage renders a spinner if no project is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiCircularProgress-root pageProgress MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    data-testid="loading_spinner"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders correctly with no end date 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiBox-root MuiBox-root-125"
    >
      <div
        class="MuiBox-root MuiBox-root-126"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Test Project Name
        </h1>
        <div
          class="MuiBox-root MuiBox-root-127"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Project Status:
          </span>
          <div
            class="MuiBox-root MuiBox-root-128"
          >
            <div
              class="MuiChip-root makeStyles-chip-129 makeStyles-chipActive-130 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                Active
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-135"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8"
        >
          <div
            class="MuiBox-root MuiBox-root-136"
          >
            <div
              class="MuiBox-root MuiBox-root-137"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
              >
                <div
                  class="MuiBox-root MuiBox-root-138"
                >
                  <div
                    class="MuiBox-root MuiBox-root-139"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2"
                    >
                      Project Objectives
                    </h2>
                  </div>
                  <p
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Project objectives
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-140"
              >
                <div
                  class="MuiBox-root MuiBox-root-142"
                >
                  <div
                    class="MuiToolbar-root MuiToolbar-regular"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-143"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h2"
                      >
                        Restoration Treatments
                      </h2>
                      <div
                        class="MuiBox-root MuiBox-root-144"
                      >
                        <button
                          aria-label="Filter Treatments"
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                          data-testid="open-layer-menu"
                          id="open-layer-menu"
                          tabindex="0"
                          title="Filter Treaatments"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Filter Treatments (0)
                            <span
                              class="MuiButton-endIcon MuiButton-iconSizeMedium"
                            >
                              <svg
                                role="presentation"
                                style="width: 1.5rem; height: 1.5rem;"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M7,10L12,15L17,10H7Z"
                                  style="fill: currentColor;"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-145"
              >
                <div
                  class="MuiBox-root MuiBox-root-146"
                >
                  <div
                    class="MuiBox-root MuiBox-root-148 makeStyles-mapContainer-147"
                    data-testid="map_container"
                  >
                    <div
                      class="makeStyles-map-149 leaflet-container leaflet-grab leaflet-touch-drag"
                      id="project_location_form_map"
                      style="position: relative;"
                      tabindex="0"
                    >
                      <div
                        class="leaflet-pane leaflet-map-pane"
                        style="left: 0px; top: 0px;"
                      >
                        <div
                          class="leaflet-pane leaflet-tile-pane"
                        >
                          <div
                            class="leaflet-layer "
                            style="z-index: 1;"
                          >
                            <div
                              class="leaflet-tile-container leaflet-zoom-animated"
                              style="z-index: 18; left: 0px; top: 0px;"
                            >
                              <img
                                alt=""
                                class="leaflet-tile"
                                role="presentation"
                                src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                                style="width: 256px; height: 256px; left: -159px; top: -31px;"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="leaflet-pane leaflet-shadow-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-overlay-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-marker-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-tooltip-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-popup-pane"
                        />
                      </div>
                      <div
                        class="leaflet-control-container"
                      >
                        <div
                          class="leaflet-top leaflet-left"
                        >
                          <div
                            class="leaflet-control-zoom leaflet-bar leaflet-control"
                          >
                            <a
                              aria-label="Zoom in"
                              class="leaflet-control-zoom-in"
                              href="#"
                              role="button"
                              title="Zoom in"
                            >
                              +
                            </a>
                            <a
                              aria-label="Zoom out"
                              class="leaflet-control-zoom-out"
                              href="#"
                              role="button"
                              title="Zoom out"
                            >
                              −
                            </a>
                          </div>
                        </div>
                        <div
                          class="leaflet-top leaflet-right"
                        />
                        <div
                          class="leaflet-bottom leaflet-left"
                        />
                        <div
                          class="leaflet-bottom leaflet-right"
                        >
                          <div
                            aria-haspopup="true"
                            class="leaflet-control-layers leaflet-control"
                          >
                            <a
                              class="leaflet-control-layers-toggle"
                              href="#"
                              title="Layers"
                            />
                            <section
                              class="leaflet-control-layers-list"
                            >
                              <div
                                class="leaflet-control-layers-base"
                              >
                                <label>
                                  <div>
                                    <input
                                      checked="checked"
                                      class="leaflet-control-layers-selector"
                                      name="leaflet-base-layers_63"
                                      type="radio"
                                    />
                                    <span>
                                       BC Government
                                    </span>
                                  </div>
                                </label>
                                <label>
                                  <div>
                                    <input
                                      class="leaflet-control-layers-selector"
                                      name="leaflet-base-layers_63"
                                      type="radio"
                                    />
                                    <span>
                                       Esri Imagery
                                    </span>
                                  </div>
                                </label>
                              </div>
                              <div
                                class="leaflet-control-layers-separator"
                                style="display: none;"
                              />
                              <div
                                class="leaflet-control-layers-overlays"
                              />
                            </section>
                          </div>
                          <div
                            class="leaflet-control-attribution leaflet-control"
                          >
                            <a
                              href="https://leafletjs.com"
                              title="A JS library for interactive maps"
                            >
                              Leaflet
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root-150"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Full Screen
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-157"
                >
                  <div
                    class="MuiTableContainer-root MuiBox-root MuiBox-root-158"
                  >
                    <table
                      aria-label="treatments-list-table"
                      class="MuiTable-root makeStyles-treatmentsTable-151 MuiTable-stickyHeader"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                            width="50"
                          >
                            ID
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                          >
                            Type
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                            width="80"
                          >
                            Year
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                          >
                            Treatments
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="105"
                          >
                            Width (m)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="110"
                          >
                            Length (m)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="100"
                          >
                            Area (ha)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-stickyHeader"
                            scope="col"
                            width="100"
                          >
                            Actions
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                        data-testid="project-table"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                            colspan="8"
                          >
                            <div
                              class="MuiBox-root MuiBox-root-159"
                            >
                              No Treatments
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-160"
              >
                <div
                  class="MuiBox-root MuiBox-root-161"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Documents
                  </h2>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-162"
                >
                  <div
                    class="MuiTableContainer-root"
                  >
                    <table
                      aria-label="attachments-list-table"
                      class="MuiTable-root makeStyles-attachmentsTable-163"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            scope="col"
                          >
                            File Size
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
                            colspan="4"
                          >
                            No Attachments
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-165 makeStyles-projectMetadata-164"
            >
              <section
                class="MuiBox-root MuiBox-root-166"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="GeneralInfoTitle"
                >
                  General Information
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-167"
                  data-testid="general_info_component"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Region:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    />
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Caribou Range:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    >
                      test 1
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      End Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      ---
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-168"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="ContactsTitle"
                >
                  Project Contacts
                </h3>
                <ul
                  class="makeStyles-projectContactList-169"
                >
                  <li
                    class="MuiBox-root MuiBox-root-172"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-173"
                    >
                      <svg
                        class="makeStyles-contactIcon-170"
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-174"
                    >
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                          Amanda Christensen
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="mailto:amanda@christensen.com"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-175"
                    >
                      <div
                        class="MuiChip-root MuiChip-sizeSmall"
                      >
                        <span
                          class="MuiChip-label MuiChip-labelSmall"
                        >
                          PRIMARY
                        </span>
                      </div>
                    </div>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-176"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="IUCNTitle"
                >
                  IUCN Conservation Actions Classifications
                </h3>
                <ul
                  class="makeStyles-projectIucnList-177"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-178"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PermitsTitle"
                >
                  Permits
                </h3>
                <ul
                  class="makeStyles-projectPermitList-179"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-180"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="FundingSourceTitle"
                >
                  Funding Sources
                </h3>
                <ul
                  class="makeStyles-projectFundingList-181"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-182"
                    >
                      <strong>
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-183"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dd>
                      </div>
                    </dl>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-184"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PartnershipTitle"
                >
                  Partnerships
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-186"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-185"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-185"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-185"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-185"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is active) 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiBox-root MuiBox-root-1"
    >
      <div
        class="MuiBox-root MuiBox-root-2"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Test Project Name
        </h1>
        <div
          class="MuiBox-root MuiBox-root-3"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Project Status:
          </span>
          <div
            class="MuiBox-root MuiBox-root-4"
          >
            <div
              class="MuiChip-root makeStyles-chip-5 makeStyles-chipActive-6 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                Active
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-11"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8"
        >
          <div
            class="MuiBox-root MuiBox-root-12"
          >
            <div
              class="MuiBox-root MuiBox-root-13"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
              >
                <div
                  class="MuiBox-root MuiBox-root-14"
                >
                  <div
                    class="MuiBox-root MuiBox-root-15"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2"
                    >
                      Project Objectives
                    </h2>
                  </div>
                  <p
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Project objectives
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-16"
              >
                <div
                  class="MuiBox-root MuiBox-root-18"
                >
                  <div
                    class="MuiToolbar-root MuiToolbar-regular"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-19"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h2"
                      >
                        Restoration Treatments
                      </h2>
                      <div
                        class="MuiBox-root MuiBox-root-20"
                      >
                        <button
                          aria-label="Filter Treatments"
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                          data-testid="open-layer-menu"
                          id="open-layer-menu"
                          tabindex="0"
                          title="Filter Treaatments"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Filter Treatments (0)
                            <span
                              class="MuiButton-endIcon MuiButton-iconSizeMedium"
                            >
                              <svg
                                role="presentation"
                                style="width: 1.5rem; height: 1.5rem;"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M7,10L12,15L17,10H7Z"
                                  style="fill: currentColor;"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-21"
              >
                <div
                  class="MuiBox-root MuiBox-root-22"
                >
                  <div
                    class="MuiBox-root MuiBox-root-24 makeStyles-mapContainer-23"
                    data-testid="map_container"
                  >
                    <div
                      class="makeStyles-map-25 leaflet-container leaflet-grab leaflet-touch-drag"
                      id="project_location_form_map"
                      style="position: relative;"
                      tabindex="0"
                    >
                      <div
                        class="leaflet-pane leaflet-map-pane"
                        style="left: 0px; top: 0px;"
                      >
                        <div
                          class="leaflet-pane leaflet-tile-pane"
                        >
                          <div
                            class="leaflet-layer "
                            style="z-index: 1;"
                          >
                            <div
                              class="leaflet-tile-container leaflet-zoom-animated"
                              style="z-index: 18; left: 0px; top: 0px;"
                            >
                              <img
                                alt=""
                                class="leaflet-tile"
                                role="presentation"
                                src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                                style="width: 256px; height: 256px; left: -159px; top: -31px;"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="leaflet-pane leaflet-shadow-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-overlay-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-marker-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-tooltip-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-popup-pane"
                        />
                      </div>
                      <div
                        class="leaflet-control-container"
                      >
                        <div
                          class="leaflet-top leaflet-left"
                        >
                          <div
                            class="leaflet-control-zoom leaflet-bar leaflet-control"
                          >
                            <a
                              aria-label="Zoom in"
                              class="leaflet-control-zoom-in"
                              href="#"
                              role="button"
                              title="Zoom in"
                            >
                              +
                            </a>
                            <a
                              aria-label="Zoom out"
                              class="leaflet-control-zoom-out"
                              href="#"
                              role="button"
                              title="Zoom out"
                            >
                              −
                            </a>
                          </div>
                        </div>
                        <div
                          class="leaflet-top leaflet-right"
                        />
                        <div
                          class="leaflet-bottom leaflet-left"
                        />
                        <div
                          class="leaflet-bottom leaflet-right"
                        >
                          <div
                            aria-haspopup="true"
                            class="leaflet-control-layers leaflet-control"
                          >
                            <a
                              class="leaflet-control-layers-toggle"
                              href="#"
                              title="Layers"
                            />
                            <section
                              class="leaflet-control-layers-list"
                            >
                              <div
                                class="leaflet-control-layers-base"
                              >
                                <label>
                                  <div>
                                    <input
                                      checked="checked"
                                      class="leaflet-control-layers-selector"
                                      name="leaflet-base-layers_33"
                                      type="radio"
                                    />
                                    <span>
                                       BC Government
                                    </span>
                                  </div>
                                </label>
                                <label>
                                  <div>
                                    <input
                                      class="leaflet-control-layers-selector"
                                      name="leaflet-base-layers_33"
                                      type="radio"
                                    />
                                    <span>
                                       Esri Imagery
                                    </span>
                                  </div>
                                </label>
                              </div>
                              <div
                                class="leaflet-control-layers-separator"
                                style="display: none;"
                              />
                              <div
                                class="leaflet-control-layers-overlays"
                              />
                            </section>
                          </div>
                          <div
                            class="leaflet-control-attribution leaflet-control"
                          >
                            <a
                              href="https://leafletjs.com"
                              title="A JS library for interactive maps"
                            >
                              Leaflet
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root-26"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Full Screen
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-33"
                >
                  <div
                    class="MuiTableContainer-root MuiBox-root MuiBox-root-34"
                  >
                    <table
                      aria-label="treatments-list-table"
                      class="MuiTable-root makeStyles-treatmentsTable-27 MuiTable-stickyHeader"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                            width="50"
                          >
                            ID
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                          >
                            Type
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                            width="80"
                          >
                            Year
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                          >
                            Treatments
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="105"
                          >
                            Width (m)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="110"
                          >
                            Length (m)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="100"
                          >
                            Area (ha)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-stickyHeader"
                            scope="col"
                            width="100"
                          >
                            Actions
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                        data-testid="project-table"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                            colspan="8"
                          >
                            <div
                              class="MuiBox-root MuiBox-root-35"
                            >
                              No Treatments
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-36"
              >
                <div
                  class="MuiBox-root MuiBox-root-37"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Documents
                  </h2>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-38"
                >
                  <div
                    class="MuiTableContainer-root"
                  >
                    <table
                      aria-label="attachments-list-table"
                      class="MuiTable-root makeStyles-attachmentsTable-39"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            scope="col"
                          >
                            File Size
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
                            colspan="4"
                          >
                            No Attachments
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-41 makeStyles-projectMetadata-40"
            >
              <section
                class="MuiBox-root MuiBox-root-42"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="GeneralInfoTitle"
                >
                  General Information
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-43"
                  data-testid="general_info_component"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Region:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    />
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Caribou Range:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    >
                      test 1
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      End Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Feb 26, 2100
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-44"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="ContactsTitle"
                >
                  Project Contacts
                </h3>
                <ul
                  class="makeStyles-projectContactList-45"
                >
                  <li
                    class="MuiBox-root MuiBox-root-48"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-49"
                    >
                      <svg
                        class="makeStyles-contactIcon-46"
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-50"
                    >
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                          Amanda Christensen
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="mailto:amanda@christensen.com"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-51"
                    >
                      <div
                        class="MuiChip-root MuiChip-sizeSmall"
                      >
                        <span
                          class="MuiChip-label MuiChip-labelSmall"
                        >
                          PRIMARY
                        </span>
                      </div>
                    </div>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-52"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="IUCNTitle"
                >
                  IUCN Conservation Actions Classifications
                </h3>
                <ul
                  class="makeStyles-projectIucnList-53"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-54"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PermitsTitle"
                >
                  Permits
                </h3>
                <ul
                  class="makeStyles-projectPermitList-55"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-56"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="FundingSourceTitle"
                >
                  Funding Sources
                </h3>
                <ul
                  class="makeStyles-projectFundingList-57"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-58"
                    >
                      <strong>
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-59"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dd>
                      </div>
                    </dl>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-60"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PartnershipTitle"
                >
                  Partnerships
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-62"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-61"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-61"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-61"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-61"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is completed) 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiBox-root MuiBox-root-63"
    >
      <div
        class="MuiBox-root MuiBox-root-64"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Test Project Name
        </h1>
        <div
          class="MuiBox-root MuiBox-root-65"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Project Status:
          </span>
          <div
            class="MuiBox-root MuiBox-root-66"
          >
            <div
              class="MuiChip-root makeStyles-chip-67 makeStyles-chipPublishedCompleted-69 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                Completed
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-73"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8"
        >
          <div
            class="MuiBox-root MuiBox-root-74"
          >
            <div
              class="MuiBox-root MuiBox-root-75"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
              >
                <div
                  class="MuiBox-root MuiBox-root-76"
                >
                  <div
                    class="MuiBox-root MuiBox-root-77"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h2"
                    >
                      Project Objectives
                    </h2>
                  </div>
                  <p
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    Project objectives
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-78"
              >
                <div
                  class="MuiBox-root MuiBox-root-80"
                >
                  <div
                    class="MuiToolbar-root MuiToolbar-regular"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-81"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h2"
                      >
                        Restoration Treatments
                      </h2>
                      <div
                        class="MuiBox-root MuiBox-root-82"
                      >
                        <button
                          aria-label="Filter Treatments"
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                          data-testid="open-layer-menu"
                          id="open-layer-menu"
                          tabindex="0"
                          title="Filter Treaatments"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Filter Treatments (0)
                            <span
                              class="MuiButton-endIcon MuiButton-iconSizeMedium"
                            >
                              <svg
                                role="presentation"
                                style="width: 1.5rem; height: 1.5rem;"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M7,10L12,15L17,10H7Z"
                                  style="fill: currentColor;"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-83"
              >
                <div
                  class="MuiBox-root MuiBox-root-84"
                >
                  <div
                    class="MuiBox-root MuiBox-root-86 makeStyles-mapContainer-85"
                    data-testid="map_container"
                  >
                    <div
                      class="makeStyles-map-87 leaflet-container leaflet-grab leaflet-touch-drag"
                      id="project_location_form_map"
                      style="position: relative;"
                      tabindex="0"
                    >
                      <div
                        class="leaflet-pane leaflet-map-pane"
                        style="left: 0px; top: 0px;"
                      >
                        <div
                          class="leaflet-pane leaflet-tile-pane"
                        >
                          <div
                            class="leaflet-layer "
                            style="z-index: 1;"
                          >
                            <div
                              class="leaflet-tile-container leaflet-zoom-animated"
                              style="z-index: 18; left: 0px; top: 0px;"
                            >
                              <img
                                alt=""
                                class="leaflet-tile"
                                role="presentation"
                                src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                                style="width: 256px; height: 256px; left: -159px; top: -31px;"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="leaflet-pane leaflet-shadow-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-overlay-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-marker-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-tooltip-pane"
                        />
                        <div
                          class="leaflet-pane leaflet-popup-pane"
                        />
                      </div>
                      <div
                        class="leaflet-control-container"
                      >
                        <div
                          class="leaflet-top leaflet-left"
                        >
                          <div
                            class="leaflet-control-zoom leaflet-bar leaflet-control"
                          >
                            <a
                              aria-label="Zoom in"
                              class="leaflet-control-zoom-in"
                              href="#"
                              role="button"
                              title="Zoom in"
                            >
                              +
                            </a>
                            <a
                              aria-label="Zoom out"
                              class="leaflet-control-zoom-out"
                              href="#"
                              role="button"
                              title="Zoom out"
                            >
                              −
                            </a>
                          </div>
                        </div>
                        <div
                          class="leaflet-top leaflet-right"
                        />
                        <div
                          class="leaflet-bottom leaflet-left"
                        />
                        <div
                          class="leaflet-bottom leaflet-right"
                        >
                          <div
                            aria-haspopup="true"
                            class="leaflet-control-layers leaflet-control"
                          >
                            <a
                              class="leaflet-control-layers-toggle"
                              href="#"
                              title="Layers"
                            />
                            <section
                              class="leaflet-control-layers-list"
                            >
                              <div
                                class="leaflet-control-layers-base"
                              >
                                <label>
                                  <div>
                                    <input
                                      checked="checked"
                                      class="leaflet-control-layers-selector"
                                      name="leaflet-base-layers_49"
                                      type="radio"
                                    />
                                    <span>
                                       BC Government
                                    </span>
                                  </div>
                                </label>
                                <label>
                                  <div>
                                    <input
                                      class="leaflet-control-layers-selector"
                                      name="leaflet-base-layers_49"
                                      type="radio"
                                    />
                                    <span>
                                       Esri Imagery
                                    </span>
                                  </div>
                                </label>
                              </div>
                              <div
                                class="leaflet-control-layers-separator"
                                style="display: none;"
                              />
                              <div
                                class="leaflet-control-layers-overlays"
                              />
                            </section>
                          </div>
                          <div
                            class="leaflet-control-attribution leaflet-control"
                          >
                            <a
                              href="https://leafletjs.com"
                              title="A JS library for interactive maps"
                            >
                              Leaflet
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root MuiBox-root-88"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Full Screen
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-95"
                >
                  <div
                    class="MuiTableContainer-root MuiBox-root MuiBox-root-96"
                  >
                    <table
                      aria-label="treatments-list-table"
                      class="MuiTable-root makeStyles-treatmentsTable-89 MuiTable-stickyHeader"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                            width="50"
                          >
                            ID
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                          >
                            Type
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                            width="80"
                          >
                            Year
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader"
                            scope="col"
                          >
                            Treatments
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="105"
                          >
                            Width (m)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="110"
                          >
                            Length (m)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-stickyHeader"
                            scope="col"
                            width="100"
                          >
                            Area (ha)
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-stickyHeader"
                            scope="col"
                            width="100"
                          >
                            Actions
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                        data-testid="project-table"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                            colspan="8"
                          >
                            <div
                              class="MuiBox-root MuiBox-root-97"
                            >
                              No Treatments
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-98"
              >
                <div
                  class="MuiBox-root MuiBox-root-99"
                >
                  <h2
                    class="MuiTypography-root MuiTypography-h2"
                  >
                    Documents
                  </h2>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-100"
                >
                  <div
                    class="MuiTableContainer-root"
                  >
                    <table
                      aria-label="attachments-list-table"
                      class="MuiTable-root makeStyles-attachmentsTable-101"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            scope="col"
                          >
                            File Size
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
                            colspan="4"
                          >
                            No Attachments
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root-103 makeStyles-projectMetadata-102"
            >
              <section
                class="MuiBox-root MuiBox-root-104"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="GeneralInfoTitle"
                >
                  General Information
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-105"
                  data-testid="general_info_component"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Region:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    />
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Caribou Range:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                      data-testid="project-region"
                    >
                      test 1
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      End Date:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Feb 26, 2021
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-106"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="ContactsTitle"
                >
                  Project Contacts
                </h3>
                <ul
                  class="makeStyles-projectContactList-107"
                >
                  <li
                    class="MuiBox-root MuiBox-root-110"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-111"
                    >
                      <svg
                        class="makeStyles-contactIcon-108"
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-112"
                    >
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                          Amanda Christensen
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="mailto:amanda@christensen.com"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root-113"
                    >
                      <div
                        class="MuiChip-root MuiChip-sizeSmall"
                      >
                        <span
                          class="MuiChip-label MuiChip-labelSmall"
                        >
                          PRIMARY
                        </span>
                      </div>
                    </div>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-114"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="IUCNTitle"
                >
                  IUCN Conservation Actions Classifications
                </h3>
                <ul
                  class="makeStyles-projectIucnList-115"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-116"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PermitsTitle"
                >
                  Permits
                </h3>
                <ul
                  class="makeStyles-projectPermitList-117"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-118"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="FundingSourceTitle"
                >
                  Funding Sources
                </h3>
                <ul
                  class="makeStyles-projectFundingList-119"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-120"
                    >
                      <strong>
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-121"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dd>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dd
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dd>
                      </div>
                    </dl>
                  </li>
                </ul>
              </section>
              <hr
                class="MuiDivider-root"
              />
              <section
                class="MuiBox-root MuiBox-root-122"
              >
                <h3
                  class="MuiTypography-root MuiTypography-body1"
                  data-testid="PartnershipTitle"
                >
                  Partnerships
                </h3>
                <dl
                  class="MuiBox-root MuiBox-root-124"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-123"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-123"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-123"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-123"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
